--- a/sync_scroll/manifest.json
+++ b/sync_scroll/manifest.json
@@ -1,9 +1,12 @@
 ﻿{
   "name": "Sync Scroll",
   "version": "0.1",
-  "update_url": "https://github.com/takatama/sync-scroll-chrome-extension/raw/master/updates.xml",
+  "update_url": "https://github.com/mkormendy/sync-scroll-chrome-extension/blob/master/updates.xml",
   "manifest_version": 2,
   "description": "Syncronize active tabs' scroll bar.",
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+             "128": "icon128.png" },
   "browser_action": {
       "name": "Sync Scroll"
   },
@@ -16,13 +19,13 @@
       "tabs"
   ],
   "content_scripts": [
-	{
-		"matches": [
-			"http://*/*",
-			"https://*/*"
-		],
-		"js": ["scroll.js"]
-	}
+  {
+    "matches": [
+      "http://*/*",
+      "https://*/*"
+    ],
+    "js": ["scroll.js"]
+  }
   ],
   "update_url": "https://github.com/takatama/sync-scroll-chrome-extension/blob/master/sync_scroll.crx?raw=true"
 }
